XMLtoCSV/objects/unpackaged/objects/Call2_vod__c.object
<CustomObject>
    <fields>
        <fullName>Last_Device_vod__c</fullName>
        <description>This field is used to track the last device used to save a call. You can build reports using this field to determine what devices are being used to record calls.</description>
        <label>Last Device</label>
        <picklist>
            <picklistValues>
                <fullName>WinModern_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data_Load_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iPhone_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tablet_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blackberry_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iPad_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date_PCYC__c</fullName>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Expiration_Date_vod__c</fullName>
        <description>The License Expiration Date field stores the Practitioner&apos;s State License Expiration Date that signed for Samples.</description>
        <label>License Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Status_vod__c</fullName>
        <description>The License Status field stores the current Status of the Practitioner&apos;s State License at the time the Signature was captured for Samples.</description>
        <label>License Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_vod__c</fullName>
        <description>State License Number for the corresponding State of the Address.</description>
        <label>License #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Id_vod__c</fullName>
        <description>The textual ID of the Location value maintained in the Location_Name_vod field.</description>
        <label>Location Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Name_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Maintains the relationship between the Person Account and the Location of the Call for Person Calls using Call Location and Group Calls with Attendees.</description>
        <label>Location Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Calls (Location Name)</relationshipLabel>
        <relationshipName>Calls_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location_Services_Status_vod__c</fullName>
        <description>Indicates the state of location services at the time a signature was  captured.

Enabled_vod – location services are turned on and the system is able to get the user’s location.
Disabled_vod – location services are turned off.
No_Connection_vod – no network connection.</description>
        <label>Location Services Status</label>
        <picklist>
            <picklistValues>
                <fullName>Enabled_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disabled_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No_Connection_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location_vod__c</fullName>
        <description>Text field to note the location of the call. There is no special processing on this field.</description>
        <label>Location</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Discussions_vod__c</fullName>
        <description>Used to display the list of Products discussed on a Medical Interaction. Product names are delimited by double-spaces and alphabetical from left to right. This field does not control processing.</description>
        <label>Medical Discussions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Event_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Medical Event associated to the Call.</description>
        <label>Sign-In Sheet</label>
        <referenceTo>Medical_Event_vod__c</referenceTo>
        <relationshipLabel>Calls</relationshipLabel>
        <relationshipName>Call2_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Medical_Inquiry_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to associate a call report to a Medical Inquiry.</description>
        <label>Medical Inquiry</label>
        <referenceTo>Medical_Inquiry_vod__c</referenceTo>
        <relationshipLabel>Calls</relationshipLabel>
        <relationshipName>Calls_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mobile_Created_Datetime_vod__c</fullName>
        <description>Date and time the Call was created on the mobile device.</description>
        <label>Mobile Created Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>System field used by mobile products to aid synchronization.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Mobile_Last_Modified_Datetime_vod__c</fullName>
        <description>Date and time the Call was last saved or submitted on the mobile device.</description>
        <label>Mobile Last Modified Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Next_Call_Notes_vod__c</fullName>
        <description>Free text area to store next call notes.  In call scheduling, Pre call notes are populated from the next-call notes of the last call that the user did on this account.  So, Next-Call notes become the pre-call notes for the next call by a same user on the same account.</description>
        <label>Next Call Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>No_Disbursement_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The No_Disbursement_vod field is used by the Call2_vod Trigger that creates Disbursement Sample Transactions. If this field is set to True, then the Sample Transactions will not be created by the Trigger. This can be utilized when loading historical call data when the intention is to not recreate the corresponding Disbursement Sample Transactions.</description>
        <label>No Disbursement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Override_Lock_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Helper field for data loads.</description>
        <label>Override Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCYC_1115__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PCYC-1115</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCYC_18_digit_ID__c</fullName>
        <formula>casesafeid(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 digit ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_ASCO_1112_1103__c</fullName>
        <description>ASCO 1112/1103 notes for MSL business interaction</description>
        <label>ASCO 1112/1103</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_Account_ID__c</fullName>
        <formula>Casesafeid(Account_vod__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_Alliance_Support_CE__c</fullName>
        <label>Alliance Support</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_Alliance_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alliance Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCYC_Attendee_ASCO_1112_1103__c</fullName>
        <description>ASCO 1112/1103 notes for MSL person interaction</description>
        <label>Attendee ASCO 1112/1103</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_Attendee_Alliance_Support__c</fullName>
        <label>Attendee Alliance Support</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_Attendee_CLL_Registry__c</fullName>
        <label>Attendee CLL Registry</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_Attendee_DAY_1_1L_CLL__c</fullName>
        <description>DAY 1 1L CLL MSL and CE initiative attendee notes</description>
        <label>Attendee Day 1 1L CLL</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_Attendee_DOME_Speaker_Education__c</fullName>
        <description>DOME Speaker Education for MSL person interaction</description>
        <label>Attendee DOME Speaker Education</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_Attendee_Disease_State_Education__c</fullName>
        <description>CE Initiative</description>
        <label>Attendee Disease State Education</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_Attendee_ECOG_Alliance_Support__c</fullName>
        <description>ECOG/Alliance Support notes for MSL person interaction</description>
        <label>Attendee ECOG/Alliance Support</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_Attendee_ECOG__c</fullName>
        <label>Attendee ECOG</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_Attendee_Education__c</fullName>
        <label>Attendee Education</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_Attendee_ICE2_Presentation_MSL__c</fullName>
        <description>Attendee ICE-2 Presentation notes field for MSLs.</description>
        <label>Attendee ICE-2 Presentation</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_Attendee_ICE_presentation__c</fullName>
        <label>Attendee ICE/ICE-2 Presentation</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_Attendee_In_Office_Program__c</fullName>
        <label>Attendee In-Office Program</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_Attendee_Notes__c</fullName>
        <description>Attendee notes for MSL busines interaction</description>
        <label>Attendee Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_Attendee_OCS_Feasibility__c</fullName>
        <description>OCS Feasibility notes for MSL attendee interaction</description>
        <label>Attendee OCS Feasibility</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_Attendee_Out_of_Office_Program__c</fullName>
        <label>Attendee Out-of-Office Program</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_Attendee_PCYC_1115__c</fullName>
        <label>Attendee PCYC-1115</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_Attendee_PCYC_1127__c</fullName>
        <description>Attendee Notes for new MSL Initiative: Attendee PCYC-1127</description>
        <label>Attendee PCYC-1127</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_Attendee_Post_Congress_Initiative__c</fullName>
        <description>Attendee Notes for Post Congress Initiative</description>
        <label>Attendee Post Congress Initiative</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_Attendee_REACH_2__c</fullName>
        <description>REACH-2 attendee notes</description>
        <label>Attendee REACH-2</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_Attendee_REACH__c</fullName>
        <description>REACH notes for MSL interaction</description>
        <label>Attendee REACH</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_Attendee_Roles__c</fullName>
        <formula>( PCYC_Pharmacist__c + PCYC_Medical_Director__c +  PCYC_Pharmacy_Director__c +  PCYC_Formulary_Personnel__c +  PCYC_Specialty_Pharmacy_Personnel__c +  PCYC_Clinical_Other__c +  PCYC_Pharmacy_Other__c +  PCYC_Pharm_Manufacturer_Relations__c +  PCYC_Student__c +  PCYC_Case_Manager__c ) &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendee Roles</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCYC_Attendee_Safety__c</fullName>
        <description>For MSL and CE Interaction Topic</description>
        <label>Attendee Safety</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_Attendee_Speaker_Training__c</fullName>
        <label>Attendee Speaker Training</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_Attendee_payer_presentation__c</fullName>
        <description>Payer presentation MSL attendee notes</description>
        <label>Attendee Payer Presentation</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_Business_Development_Deal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup for Business Development deals on Call Screen.</description>
        <label>Business Development Deal</label>
        <referenceTo>PCYC_Business_Development_Deals__c</referenceTo>
        <relationshipLabel>Calls</relationshipLabel>
        <relationshipName>Calls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PCYC_CE_Disease_State_Education__c</fullName>
        <description>CE Initiative</description>
        <label>Disease State Education</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_CLL_Registry_CE__c</fullName>
        <label>CLL Registry</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_CLL_Registry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CLL Registry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCYC_Call_Key_Messages__c</fullName>
        <description>PCYC Concatenated Call Key Messages for Reporting Purposes so we don&apos;t need to join the Call Key Messages.</description>
        <inlineHelpText>Concatenated Disease Topics</inlineHelpText>
        <label>Disease Topics</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_Call_Notes__c</fullName>
        <label>Call Notes</label>
        <picklist>
            <picklistValues>
                <fullName>Call Note 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Note 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Note 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCYC_Call_Source__c</fullName>
        <defaultValue>&quot;PCYC&quot;</defaultValue>
        <label>Call Source</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_Call_Type__c</fullName>
        <description>Call Type for NAE/FAE/RAM</description>
        <label>Call Type</label>
        <picklist>
            <picklistValues>
                <fullName>Access Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access Issue Resolution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost of Care Deck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GPO/Contract Discussion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IOD Deck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSL/NAE Joint Payer Interaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value Prop Deck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicare Deck</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCYC_Call_Year__c</fullName>
        <formula>LEFT(Datetime_Text__c , 4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_Case_Manager__c</fullName>
        <description>NAE Attendee Roles</description>
        <label>Case Manager</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYC_Clinical_Other__c</fullName>
        <description>NAE Attendee Roles</description>
        <label>Clinical Other</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYC_Company_Sponsored_Study__c</fullName>
        <label>Company Sponsored Study</label>
        <picklist>
            <picklistValues>
                <fullName>PCYC-1103</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1106</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1111</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1115</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1116</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1119</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1120</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1121</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1122E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1123</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1124</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1125</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1126E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1127</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1128</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1129</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1130</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1131</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1132</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1133</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1134</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1135</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1136</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1137</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1138</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-2401</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JBI Sponsored Trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1140</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1141</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCYC-1142</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>PCYC_Compliance_Affirm__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Call Compliance Affirm</description>
        <label>Affirm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCYC_Conference__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCYC_DAY_1_1L_CLL_Notes__c</fullName>
        <description>DAY 1 1L CLL MSL and CE initiative notes text</description>
        <label>Day 1 1L CLL</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_DAY_1_1L_CLL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DAY 1 1L CLL MSL and CE initiative</description>
        <label>Day 1 1L CLL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCYC_DOME_Speaker_Education__c</fullName>
        <description>DOME Speaker Education notes for MSL business interaction.</description>
        <label>DOME Speaker Education</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_DOSE_Initiative_CE__c</fullName>
        <label>DOSE Initiative</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_DOSE_Initiative__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DOSE Initiative</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCYC_Days_Pending_Expenses__c</fullName>
        <description>Field to track how many days pending calls with expenses.</description>
        <formula>NOW() -  ( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Pending Expenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYC_Detailed__c</fullName>
        <label>Detailed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCYC_Disease_State_Education__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CE initiative</description>
        <label>Disease State Education</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCYC_ECOG_Alliance_Support__c</fullName>
        <description>ECOG/Alliance Support notes for MSL business call.</description>
        <label>ECOG/Alliance Support</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_ECOG_CE__c</fullName>
        <label>ECOG</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_ECOG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ECOG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCYC_Education_CE__c</fullName>
        <label>Education</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_Education__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Education</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCYC_Follow_Up_Required__c</fullName>
        <label>Follow-Up Required</label>
        <picklist>
            <picklistValues>
                <fullName>No Follow-Up Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-up with Clinical Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-up with Clinical Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-up with Medical Affairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-up with JBI MSL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>PCYC_Formulary_Personnel__c</fullName>
        <description>NAE Attendee Roles</description>
        <label>Formulary Personnel</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCYC_ICE2_Presentation_Notes_MSL__c</fullName>
        <description>ICE-2 Presentation notes field for MSLs.</description>
        <label>ICE-2 Presentation</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_ICE2_presentation_MSL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ICE-2 Presentation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCYC_ICE_Presentation_CE__c</fullName>
        <label>ICE/ICE-2 presentation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_ICE_presentation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ICE/ICE-2 Presentation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCYC_IST_Text__c</fullName>
        <description>For reporting purposes - to show Yes / No instead of True / False or 0 / 1.</description>
        <formula>IF( PCYC_IST__c, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IST/ Coop / CTEP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_IST__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IST/ Coop / CTEP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCYC_In_Office_Program_CE__c</fullName>
        <label>In-Office Program</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_In_Office_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In-Office Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCYC_Initiative__c</fullName>
        <label>MSL Initiatives</label>
        <picklist>
            <picklistValues>
                <fullName>ASCO 1112/1103</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Development Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Studies Overview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLL Safety Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOME Speaker Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECOG/Alliance Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCL - Safety Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OCS Feasibility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Congress Initiative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REACH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VA Initiative</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>PCYC_Interaction_Notes__c</fullName>
        <description>Interaction Notes for MSL team.</description>
        <label>Interaction Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_Interaction_Type__c</fullName>
        <description>Interaction Type on Biz Dev Call Screen</description>
        <label>Interaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Person Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Meeting</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCYC_JBICall_Id__c</fullName>
        <externalId>true</externalId>
        <label>JBI Call Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PCYC_JBI_Rep_Email__c</fullName>
        <label>JBI Rep Email</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_JBI_Rep_Name__c</fullName>
        <label>JBI Rep Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_JBI_Rep_Phone__c</fullName>
        <label>JBI Rep Phone</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_JBI_Status__c</fullName>
        <label>JBI Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_JBI_TerritoryId__c</fullName>
        <label>JBI TerritoryId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_MIRF_Status__c</fullName>
        <description>MIRF status captured by MSL.</description>
        <label>MIR Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed - Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed - Fulfilled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCYC_MIR_Case__c</fullName>
        <label>MIR Case #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_MSL_ASCO_1112_1103__c</fullName>
        <defaultValue>false</defaultValue>
        <description>MSL Initiative Checkbox</description>
        <label>ASCO 1112/1103</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCYC_MSL_CE_Safety__c</fullName>
        <description>For MSL and CE Interaction Topic Notes</description>
        <label>Safety</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_MSL_CLL_Safety_Education__c</fullName>
        <defaultValue>false</defaultValue>
        <description>MSL Initiative Checkbox</description>
        <label>CLL Safety Education</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCYC_MSL_Call_Notes__c</fullName>
        <label>MSL Call Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_MSL_Call_Notes_pl__c</fullName>
        <label>MSL Call Notes</label>
        <picklist>
            <picklistValues>
                <fullName>Call Note 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Note 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Note 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>